# PixelHellC

./: CMakeLists.txt  README.md  main.c
include/: pattern.h  render.h  state.h
render/: window.c
src/: pattern.c  render.c  state.c
